# diffeq

./: .pre-commit-config.yaml  pyproject.toml
src/diffeq/: protocol.py
src/diffeq/numba/: __init__.py  cache.py  problem.py  savers.py  solution.py  solve.py  solvers.py  utils.py
src/diffeq/numba/tests/: test_example.py
src/diffeq/numpy/: __init__.py  cache.py  problem.py  savers.py  solution.py  solve.py  solvers.py  utils.py
src/diffeq/numpy/tests/: test_example.py
